@@ -2,7 +2,6 @@
 // Wagtail CMS main stylesheet
 // =============================================================================
 
-@import 'tools.breakpoints';
 @import 'objects';
 @import 'components';
 @import 'utilities';
